# kalshi-combos-TWO

./: .env.example  .gitignore  CLAUDE.md  LIVE_ISSUES.txt  NOTES.md  README.md  RISK_ENGINE_AUDIT_ACTION_PLAN.txt  RISK_ENGINE_LIVE_BALANCING_VALIDATION_AUDIT.txt  pyproject.toml
config/: demo.yaml  prod.yaml
docs/: atlas.html  dnp_scalar_settlement.md  risk_engine_briefing.txt  sgo_mapping_demo.yaml  sport_onboarding_playbook.md  sport_onboarding_timeline_evidence.md
tests/: conftest.py  test_adaptive_caps.py  test_adaptive_caps_wiring.py  test_archetypes.py  test_architecture.py  test_auth.py  test_balance.py  test_basket_width.py  test_book_risk_equity_basis.py  test_book_risk_offloop.py  test_book_risk_ruin_confidence.py  test_book_risk_wiring.py  test_breakers.py  test_candidate_book_risk.py  test_candidate_gate_atomic.py  test_candidate_gate_deadline_wiring.py  test_candidate_gate_ev_and_latency.py  test_candidate_gate_wiring.py  test_candidate_ruin_equity_basis.py  test_cap_family.py  test_caps_enforced.py  test_certified_hedge_gate.py  test_cli.py  test_config.py  test_containment_collapse.py  test_containment_windows.py  test_conventions.py  test_copula.py  test_delta_cap_autoscale.py  test_derived_cap_engine.py  test_devig.py  test_directional_hedge_cap.py  test_dixon_coles.py  test_dotenv.py  test_exposure.py  test_exposure_mutex_cap.py  test_exposure_structural_deltas.py  test_feed.py  test_fees.py  test_fetch_history.py  (+108 more)
tools/: _gen_report_tables.py  _persist_ticksig.py  calibrate_margin_total.py  calibrate_mlb_gap_pairs.py  calibrate_mlb_new_props.py  (+43 more)
(+304 files in other folders)
