[project]
name = "combomaker"
version = "0.1.0"
description = "Automated market maker for Kalshi combo (multivariate) RFQs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10",
    "aiosqlite>=0.20",
    "cryptography>=43.0",
    "numpy>=2.0",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "scipy>=1.14",
    "structlog>=24.0",
    "tzdata>=2026.3",
]

[project.scripts]
combomaker = "combomaker.ops.cli:main"

[dependency-groups]
dev = [
    "hypothesis>=6.156.1",
    "mypy>=1.11",
    "pyarrow>=24.0.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/combomaker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: hits the network (demo environment) — excluded by default",
]
addopts = "-m 'not integration'"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/combomaker"]

[[tool.mypy.overrides]]
module = ["scipy.*"]
ignore_missing_imports = true
